Fixed text coloring in `Home`'s latest posts
Bug created in profile color themes update. Apparently some names overlap within unrelated CSS files.
I mean, why, React? Why?

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -127,6 +127,7 @@
 }
 
 .Home-Container .right .right-card .right-posts-header {
+    color: var(--push-text);
     margin: 20px 0;
     text-align: center;
 }
